2008-11-01  Gabor Csardi  <csardi@szaffi>

	* src/bipartite.c (igraph_incidence) : added

2008-10-31  Gabor Csardi  <csardi@szaffi>

	* src/bipartite.c (igraph_create_bipartite) : added
	* examples/simple/igraph_bipartite_create.c : added

2008-10-30  Gabor Csardi  <csardi@szaffi>

	* src/structure_generators.c (igraph_full_bipartite) :
	* src/bipartite.c (igraph_full_bipartite) : moved

	* src/bipartite.c (igraph_bipartite_projection) : rewritten
	* examples/simple/igraph_bipartite_projection.c : added

	* src/structure_generators.c (igraph_full_bipartite) : bug fixed,
	types vector was not set up correctly

2008-10-28  Gabor Csardi  <csardi@szaffi>

	* src/bipartite.c (igraph_bipartite_projection) : added

2008-10-27  Gabor Csardi  <csardi@szaffi>

	* src/structure_generators.c (igraph_full_bipartite) : bug fixed

	* src/structure_generators.c (igraph_full_bipartite) : added

	* src/structural_properties.c (igraph_transitivity_barrat) : added

	* src/structural_properties.c
	(igraph_avg_nearest_neighbor_degree) : 'weights' argument added

	* src/structural_properties.c (igraph_strength) : added

	* src/structural_properties.c 
	(igraph_avg_nearest_neighbor_degree) : added

2008-10-24  Gabor Csardi  <csardi@szaffi>

	* src/structural_properties.c (igraph_shortest_paths_johnson) : added

2008-10-01  Gabor Csardi  <csardi@szaffi>

	* src/blicc.cc (igraph_automorphisms) : fixed a memory leak

2008-09-29  Gabor Csardi  <csardi@szaffi>

	* src/spectral_properties.c (igraph_laplacian) : added 'weights' 
	argument

	* src/type_indexededgelist.c (igraph_get_eids) : rewritten to
	use binary search. In practice it is faster only if we search 
	for adjacent edges of high-degree vertices frequently
	* examples/simple/igraph_get_eids.c : added

2008-09-26  Gabor Csardi  <csardi@szaffi>

	* src/basic_query.c (igraph_are_connected) : speeded up by using 
	the new igraph_get_eid2

	* src/type_indexededgelist.c (igraph_get_eid2) : added, 