@@ -13,6 +13,7 @@
 
 <section><title>Create two-mode networks</title>
 <!-- doxrox-include igraph_create_bipartite -->
+<!-- doxrox-include igraph_incidence -->
 <!-- doxrox-include igraph_full_bipartite -->
 </section>
 
