@@ -902,7 +902,7 @@ int igraph_bipartite_projection(const igraph_t *graph,
 				igraph_integer_t probe1);
 
 int igraph_incidence(igraph_t *graph, igraph_vector_bool_t *types,
-		     const igraph_matrix_t *incidence, 
+		     const igraph_matrix_t *incidence,  igraph_bool_t directed,
 		     igraph_neimode_t mode, igraph_bool_t multiple);
 
 /* -------------------------------------------------- */
